// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackingCard /> default matches with snapshot 1`] = `
<article
  className="sc-bdvvtL gLRWLC k-BackingCard k-BackingCard--hasBorder"
>
  <div
    className="k-BackingCard__gridWrapper"
  >
    <div
      className="k-BackingCard__titleWrapper k-BackingCard__drawer"
    >
      <h3
        className="k-u-line-height-1 k-u-size-big k-u-weight-bold k-BackingCard__title k-u-margin-none k-u-align-center"
      >
        <span
          width={0}
        >
          <span />
          <span>
            Lorem ipsum dolor sit amet, consectetuer adipiscing eget dolor.
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </h3>
    </div>
    <div
      className="k-BackingCard__descriptionWrapper k-BackingCard__drawer k-BackingCard__drawer--extensible"
    >
      <div
        className="k-BackingCard__description"
      >
        <div>
          Custom description
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`<BackingCard /> with some props matches with snapshot 1`] = `
<article
  className="sc-bdvvtL gLRWLC k-BackingCard k-BackingCard--disabled"
>
  <div
    className="k-BackingCard__imageWrapper"
  >
    <img
      alt=""
      src="/kitten.jpg"
    />
  </div>
  <div
    className="k-BackingCard__gridWrapper"
  >
    <span
      className="sc-dkPtRN ftzKab k-Tag k-BackingCard__headingTag k-Tag--info k-Tag--regular k-Tag--dark"
    >
      <svg
        fill="#222"
        height="13"
        viewBox="0 0 18 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <path
          d="M8.999 0l1.93 5.974c.028.09.112.15.206.15l6.274-.013-5.084 3.68a.216.216 0 0 0-.079.242L14.198 16l-5.072-3.7a.216.216 0 0 0-.255 0L3.801 16l1.953-5.967a.216.216 0 0 0-.079-.243L.591 6.111l6.274.012c.094 0 .178-.06.207-.15L8.999 0z"
        />
      </svg>
      Star reward
    </span>
    <div
      className="k-BackingCard__titleWrapper k-BackingCard__drawer"
    >
      <h3
        className="k-u-line-height-1 k-u-size-big k-u-weight-bold k-BackingCard__title k-u-margin-none k-u-align-center"
      >
        <span
          width={0}
        >
          <span />
          <span>
            Lorem ipsum dolor sit amet, consectetuer adipiscing eget dolor.
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </h3>
    </div>
    <p
      className="k-BackingCard__drawer k-BackingCard__amount__wrapper k-u-align-center"
    >
      <span
        className="k-u-line-height-1 k-u-weight-bold k-BackingCard__amount k-u-block"
      >
        65 €
      </span>
      <span
        className="k-u-letter-spacing-10 k-u-line-height-1-4 k-u-size-nano k-u-transform-uppercase k-u-weight-regular k-BackingCard__amount__suffix k-u-block"
      >
        Etiam Consectetur Venenatis
      </span>
    </p>
    <div
      className="k-BackingCard__descriptionWrapper k-BackingCard__drawer k-BackingCard__drawer--extensible"
    >
      <div
        className="k-BackingCard__description k-BackingCard__description--truncateText"
      >
        <div>
          <p
            className="k-u-margin-none"
          >
            Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.
          </p>
          <p
            className="k-u-margin-none"
          >
            Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tell
          </p>
          <p
            className="k-u-margin-none"
          >
            Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tell
          </p>
          <p
            className="k-u-margin-none"
          >
            Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tell
          </p>
        </div>
      </div>
    </div>
    <ul
      className="k-BackingCard__tagList k-BackingCard__drawer"
    >
      <li
        className="sc-dkPtRN ftzKab k-Tag k-Tag--info k-Tag--regular k-Tag--light"
      >
        <strong
          className="k-u-weight-regular"
        >
          5
        </strong>
         
        contributeurs
      </li>
      <li
        className="sc-dkPtRN ftzKab k-Tag k-Tag--info k-Tag--regular k-Tag--light"
      >
        <strong
          className="k-u-weight-regular"
        >
          2/6
        </strong>
         
        disponibles
      </li>
    </ul>
  </div>
  <button
    className="sc-gsDKAQ gTEtQZ k-Button k-BackingCard__button k-BackingCard__drawer k-Button--regular k-Button--helium k-Button--fit-content k-Button--disabled"
    disabled={true}
    style={
      Object {
        "--Button-border-radius": null,
      }
    }
    type="button"
  >
    Je soutiens
  </button>
</article>
`;
